--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -26,6 +26,11 @@
             </div>
         </li>
 
+        <li class="nav-item dropdown no-arrow my-auto">
+            <a class="btn btn-dark" href="/articles" target="_blank">
+                Visit Forum
+            </a>
+        </li>
 
         <div class="topbar-divider d-none d-sm-block"></div>
 
