--- a/views/app/blogs/blogs.ejs
+++ b/views/app/blogs/blogs.ejs
@@ -39,6 +39,7 @@
                         <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                             <div class="row">
                                 <div class="col-sm-12">
+                                    <% if (blogs.length > 0) { %>
                                     <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%">
                                         <thead>
                                             <tr role="row">
@@ -84,6 +85,9 @@
                                             <% }) %>
                                         </tbody>
                                     </table>
+                                    <% } else { %>
+                                    <p>No blogs yet</p>
+                                    <% } %>
                                 </div>
                             </div>
                             <div class="row">
