--- a/views/app/blogs/edit.ejs
+++ b/views/app/blogs/edit.ejs
@@ -50,7 +50,7 @@
                             <div class="col-md-4 col-sm-12">
                                 <div class="input-group mb-5">
                                     <% if (blog.image) { %>
-                                        <img class="img-fluid" src="/img/blogs/<%= blog.image %>" alt="" />
+                                        <img class="img-fluid" src="/img/posts/<%= blog.image %>" alt="" />
                                     <% } %>
                                     <div class="input-group">
                                         <input class="form-control" type="file" id="image" name="image" style="height: 50px; padding: 9px 13px" />
